--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "bitgo-cli-v2",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "A command line tool to use BitGo's wallets with",
   "author": "BitGo Inc.",
   "license": "Apache-2.0",
   "main": "src/index.js",
   "bin": {
-    "bg": "bin/bgo"
+    "bgo": "bin/bgo"
   },
   "scripts": {
     "test": "node ./node_modules/mocha/bin/_mocha -t 50000 --recursive ./test --no-color",
